kubectl_deploy/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: courts-local-scorecard-dev-ingress
  namespace: courts-local-scorecard-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/set-identifier: courts-local-scorecard-dev-ingress-courts-local-scorecard-dev-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /.well-known/security.txt {
        auth_basic off;
        return 301 https://raw.githubusercontent.com/ministryofjustice/security-guidance/main/contact/vulnerability-disclosure-security.txt;
      }
spec:
  tls:
  - hosts:
    - courts-local-scorecard-dev.apps.live.cloud-platform.service.justice.gov.uk
  rules:
  - host: courts-local-scorecard-dev.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: local-scorecard-service
            port:
              number: 8080
